--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-<div class="wrapper">
-    <header>To-Do-List</header>
-    <div class="input-area">
-        <input type="text" id="input-task" placeholder="Add a to-do">
-        <button id="add-task-button">ADD TASK</button>
+    <div class="wrapper">
+        <div class="header">
+            <button id="clear-button" class="fas fa-eraser"></button>
+            <header>To-Do-List</header>
+        </div>
+         <div class="input-area">
+            <input type="text" id="input-task" placeholder="What needs to be done?">
+            <button type="submit" id="add-task-button" class="fas fa-plus"></button>
+        </div>
+        <ul id="task-list"></ul>
     </div>
-    <ul id="task-list">
-    </ul>
-</div>
 </body>
 <script src="js/app.js"></script>
 </html>
